feat: add sleep reminder functionality and related configurations